Fix collapsing dates on Safari

--- a/assets/style.css
+++ b/assets/style.css
@@ -268,6 +268,7 @@ body:has(.home-intro) .site-nav a[href="/photo/"] {
 .entry-date {
   color: var(--color-text-primary);
   font-size: var(--list-date-font-size);
+  white-space: nowrap;
 }
 
 .page-meta {
